# PDFnik-Schemes

./: pyproject.toml  todo.txt
pdfnik_contracts/: pdf_content.py
